--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "react": "18",
-    "react-dom": "18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tailwindcss": "tailwindcss"
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -43,8 +40,6 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.14.0",
-    "html-webpack-plugin": "^5.6.3",
     "prettier": "^3.4.2",
     "typescript-eslint": "^8.21.0"
   }
