--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2"
   },
@@ -36,11 +37,14 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.18.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0"
   }
 }
