--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2"
